tests/fixtures/positive/style/UnnecessaryParentheses.kt
package style

fun example(): Int {
    val x = 42
    val y = (x)
    return (x)
    return (x + 1)
}

fun doubleParens() {
    val a = ((42))
}

fun assignmentParens() {
    var x = 0
    x = (5)
}
